k8s-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: container-demo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: container-demo
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
        - name: container-demo
          image: pickleddragon.azurecr.io/container-demo:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 250m
