k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: container-demo-front
spec:
  type: LoadBalancer
  ports:
    - port: 8085
  selector:
    app: container-demo
